--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
    <head>
 
    </head>
-   <body style="background-color: grey;">
+   <body style="background-color: gray;">
          <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
          <script src="class.js"></script>
          <script src="GrassEater.js"></script>
