--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    </head>
    <body style="background-color: gray;">
          <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+         <script src="livingCreature.js"></script>
          <script src="class.js"></script>
          <script src="GrassEater.js"></script>
          <script src="gsh.js"></script>
