--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
+<!DOCTYPE html>
 <html>
-   <head>
-   </head>
-   <body style="background-color: gray;">
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-         <script src="livingCreature.js"></script>
-         <script src="class.js"></script>
-         <script src="GrassEater.js"></script>
-         <script src="gsh.js"></script>
-         <script src="virus.js"></script>
-         <script src="antivirus.js"></script>
-         <script src="bomb.js"></script>
-       <script src="script.js"></script>
-   </body>
+<head>
+   <title>Js Game</title>
+   <meta charset="utf8">
+</head>
+
+<body style="background-color: gray;">
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+   <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+   <script type="text/javascript" src="script.js"></script>
+</body>
+
 </html>
