--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-   <title>Js Game</title>
-   <meta charset="utf8">
-</head>
+  <head>
+    <title>Js Game</title>
+    <meta charset="utf8">
 
-<body style="background-color: gray;">
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
-   <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-   <script type="text/javascript" src="script.js"></script>
-</body>
+  </head>
+  <body style="background: gray;">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script defer type="text/javascript" src="script.js"></script>
+
+    <div class="statistic">
+      <p id="grass">grass</p>
+      <p id="grassEaten"></p>
+    </div>
+  </body>
 </html>
