Grass actual and full status correct

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script defer type="text/javascript" src="script.js"></script>
 
     <div class="statistic">
-      <p id="grass">grass</p>
-      <p id="grassEaten"></p>
+      <p id="grassActual"></p>
+      <p id="grass"></p>
     </div>
   </body>
 </html>
