--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script defer type="text/javascript" src="script.js"></script>
 
-    <div class="statistic">
+    <div class="statistic" style="font-size: large; font-family: Arial, Helvetica, sans-serif; color: white;">
       <p id="grassActual"></p>
       <p id="grass"></p>
     </div>
