--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Js Game</title>
-    <meta charset="utf8">
 
-  </head>
-  <body style="background: gray;">
+<head>
+  <title>Js Game</title>
+  <meta charset="utf8">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <div class="statistic">
+    <p id="grassActual"></p>
+    <p id="grass"></p>
+    <button id="btn">Click Me</button>
+  </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-    <script defer type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+</body>
 
-    <div class="statistic" style="font-size: large; font-family: Arial, Helvetica, sans-serif; color: white;">
-      <p id="grassActual"></p>
-      <p id="grass"></p>
-    </div>
-  </body>
 </html>
