laser status work

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="statistic">
     <p id="grassActual"></p>
     <p id="grass"></p>
+    <p id="laser"></p>
     <button id="btn">Click Me</button>
   </div>
 
