--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="body">
 
   <div class="statistic">
     <p id="grassActual"></p>
