--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <p id="grassActual"></p>
     <p id="grass"></p>
     <p id="laser"></p>
-    <button id="btn">Click Me</button>
+    <button id="spawnBomb">Spawn Bomb</button> 
+  </br>
+    <button id="changeWeatherToWinter">Change Weather To Winter</button>
+    <button id="changeWeatherToSpring">Change Weather To Spring</button>
+    <button id="changeWeatherToSummer">Change Weather To Summer</button>
+    <button id="changeWeatherToAutumn">Change Weather To Autumn</button>
   </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
